--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,12 @@
 }
 /* END: General styles */
 
+/* Start: Navbar */
+.navbar__auth-links {
+  @apply flex-1 flex sm:justify-end justify-center max-sm:mt-4;
+}
+/* END: Navbar */
+
 /* START: Hero styles */
 .hero {
   @apply flex xl:flex-row flex-col gap-5 relative z-0 max-w-[1440px] mx-auto;
